--- a/react-horoscope-v2/public/manifest.json
+++ b/react-horoscope-v2/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Daily Horosope",
+  "name": "Horoscope app built using React",
   "icons": [
     {
       "src": "favicon.ico",
